add soul bonetorch support